--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -34,7 +34,7 @@
         app:layout_constraintLeft_toRightOf="@+id/image_view_map"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_view_candy_store"
-        android:onClick="onGoogleMapCandyCoded"/>
+        android:onClick="createMapIntent"/>
 
     <TextView
         android:id="@+id/text_view_phone"
